--- a/binarySearch.html
+++ b/binarySearch.html
@@ -15,5 +15,6 @@
     <button id="start-button">Start Binary Search</button></div>
     </div>
     <script src="binarySearch.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
