--- a/index.html
+++ b/index.html
@@ -1,70 +1,121 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code House - Linear Search</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Header -->
-    <header class="header">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ds Geeks - Home</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="WhatsApp Image 2024-08-29 at 6.26.40 PM.jpeg"
+    />
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
         <div class="logo">
-            <img src="logo.jpg" alt="DS Geeks Logo">
-        <!---   <span style="margin-left: 5px; font-size: 1.5em; font-weight: bold;">DS Geeks</span> -->
+          <a href="index.html">
+          <img
+            src="WhatsApp Image 2024-08-29 at 6.26.40 PM.jpeg"
+            alt="DS Geeks Logo"
+          />
+        </a>
         </div>
-        <nav class="nav">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">CONTACT</a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Topics</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </nav>
-    </header>
-
-    <!-- Main content container -->
-    <div class="container">
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <ul>
-                <li>Aim</li>
-                <li>Overview</li>
-                <li>Animation</li>
-                <li>Analysis</li>
-                <li>Posttest</li>
-            </ul>
-        </aside>
-
-        <!-- Main content area -->
-        <main class="main-content">
-            <h1>Linear Search</h1>
-            <h2>Estimated Time - </h2>
-            <p>1 hour</p>
-            <h2>Learning Objectives of this Experiment - </h2>
-            <p>In this experiment, we will be able to do the following:</p>
-            <ul>
-                <li>Understand the basic concept of the linear search algorithm and how it is used to find an element in an unsorted list.</li>
-                <li>Understanding the principles of linear search as a foundation for algorithms and problem-solving </li>
-                <li>Implement the linear search algorithm in a programming language of choice and test it with different datasets.</li>
-                <li>Analyze the time complexity of the linear search algorithm and compare it with other searching algorithms like binary search.</li>
-            </ul>
-        </main>
-    </div>
-    <div class="bottom-nav">
-        <div class="follow-us">
-            <h4>Follow Us</h4>
-            <div class="social-links">
-                <a href="#"><img src="youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
-            </div>
-            <div class="footer-text">
-                <p>DS Geeks is a website to provide the best learning material on technical subjects.</p>
-                <p>&copy; Copyright 2024. All Rights Reserved.</p>
-            </div>
+        <div class="header-image">
+          <img
+            src="WhatsApp Image 2024-08-29 at 6.28.49 PM.jpeg"
+            alt="Coding Image"
+          />
         </div>
+      </div>
+    </header>
+    <div class="center-img">
+      <img src="multi-ethnic-group-young-men-women-studying-indoors.jpg" />
     </div>
-    
-    <script src="scripts.js"></script>
-</body>
+
+    <div class="blocks">
+      <div class="block1">
+        <div class="header">
+          <a href="linearSearch.html">Searching </a>
+        </div>
+        <ul class="info">
+          <li style="font-size: 22px; padding: 10px" ><a href="linearSearch.html" style="color: #000;">Linear Search</a></li>
+          <li style="font-size: 22px; padding: 10px"><a href="binarySearch.html" style="color: #000;">Binary Search</a></li>
+        </ul>
+      </div>
+
+      <div class="block1">
+        <div class="header">
+          <a href="#">Hashing </a>
+        </div>
+        <ul class="info">
+          <li style="font-size: 22px">Types of Hashing</li>
+          <ol class="info1">
+            <li style="font-size: 18px; padding: 2px">Divide</li>
+            <li style="font-size: 18px; padding: 2px">Folding</li>
+            <li style="font-size: 18px; padding: 2px">Mid-Square</li>
+          </ol>
+          <li style="font-size: 22px; padding: 10px">Collision Resolution</li>
+          <ol class="info1">
+            <li style="font-size: 18px; padding: 2px">Linear Probing</li>
+            <li style="font-size: 18px; padding: 2px">Double Hashing</li>
+            <li style="font-size: 18px; padding: 2px">Chaining</li>
+          </ol>
+        </ul>
+      </div>
+      <div class="block1">
+        <div class="header">
+          <a href="#">Stack and Queue </a>
+        </div>
+        <ul class="info">
+          <li style="font-size: 22px">Stack Operation</li>
+          <ol class="info1">
+            <li style="font-size: 18px; padding: 2px">Push()</li>
+            <li style="font-size: 18px; padding: 2px">Pop()</li>
+            <li style="font-size: 18px; padding: 2px">Peek()</li>
+          </ol>
+        </ul>
+      </div>
+      <div class="block1">
+        <div class="header">
+          <a href="#">Linklist </a>
+        </div>
+      </div>
+      <div class="block1">
+        <div class="header">
+          <a href="hello">Tree</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="bottom-nav">
+      <div class="follow-us">
+        <h4>Follow Us</h4>
+        <div class="social-links">
+          <a href="#"><img src="./youtube.png" alt="Youtube" /></a>
+          <a href="#"><img src="./instagram.jpeg" alt="Instagram" /></a>
+          <a href="#"><img src="./facebook.jpg" alt="Facebook" /></a>
+          <a href="#"><img src="./linkedin.jpeg" alt="LinkedIn" /></a>
+        </div>
+        <div class="footer-text">
+          <p>
+            DS Geeks is a website to provide the best learning material on
+            technical subjects.
+          </p>
+          <p>&copy; Copyright 2024. All Rights Reserved.</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
